@@ -7,8 +7,7 @@ libexec_SCRIPTS = icon-name-mapping
 	< $< > $@
 
 pkgconfig_in_files =				\
-	icon-naming-utils.pc.in			\
-	icon-naming-utils-uninstalled.pc.in
+	icon-naming-utils.pc.in
 pkgconfigdir = $(datadir)/pkgconfig
 pkgconfig_DATA = $(pkgconfig_in_files:.pc.in=.pc)
 
@@ -21,13 +20,15 @@ EXTRA_DIST =				\
 	icon-name-mapping.pl.in		\
 	$(pkgconfig_in_files)		\
 	$(dtd_DATA)			\
-	$(pkgdata_DATA)
+	$(pkgdata_DATA)			\
+	icon-naming-utils-uninstalled.pc.in
 
 CLEANFILES =				\
 	$(libexec_SCRIPTS)
 
 DISTCLEANFILES =			\
-	$(pkgconfig_DATA)
+	$(pkgconfig_DATA)		\
+	icon-naming-utils-uninstalled.pc
 
 MAINTAINERCLEANFILES =			\
 	Makefile.in			\
